src/app/components/result/result.component.css
.result {
  --result-info-color: #157347;
  --result-info-bg: var(--result-info-color);
  --result-notice-color: #1069c8;
  --result-notice-bg: var(--result-notice-color);
  --result-warning-color: #ae5a01;
  --result-warning-bg: #ff9019;
  --result-error-color: #bb2d3b;
  --result-error-bg: var(--result-error-color);
  --result-critical-color: var(--result-error-color);
  --result-critical-bg: var(--result-error-color);
  width: 80%;
  margin: auto;
}

@media(max-width:991px) {
  .result {
      width: 100%;
  }
}

.result section.testcase header.info {
  color: var(--result-info-color);
}

.result section.testcase header.notice {
  color: var(--result-notice-color);
}

.result section.testcase header.warning {
  color: var(--result-warning-color);
}

.result section.testcase header.error {
  color: var(--result-error-color);
}

.result section.testcase header.critical {
  color: var(--result-critical-color);
}

.result section.testcase header button > i.fa {
  margin-right: 3rem;
  margin-top: 0.1rem;
  width: 1rem;
}

.result section.testcase h4 {
  font-size: 1.1rem;
  display: inline-block;
  margin: 0;
}

.result section.testcase h4 .testcase-name i {
  width: 1rem;
  display: inline-block;
  text-align: center;
  margin-left: -1.3rem ;
  margin-right: 0.3rem;
}

.result section.testcase h4 button {
  background: none;
  border: none;
  color: inherit;
  padding: 0;
  text-align: left;
  display: flex;
}

.result section.testcase header {
  display: flex;
  align-items: flex-start;
}

.result section.testcase header h4 {
  display: flex;
  cursor: pointer;
  margin: 0.25rem 0;
}
.result section.testcase header .test-case-id {
  display: inline-block;
  background-color: #d3eeff;
  color: #555454;
  margin-left: 1em;
  font-size: 0.9em;
  padding: 0.15em 0.4em;
  white-space: nowrap;
}

.result section.testcase ul li .level {
  display: inline;
  padding: 0.2em 0.3em;
  border-radius: 0.3em;
  font-size: 0.8em;
  margin-right: 0.5em;
  text-transform: uppercase;
}

.result .filters .active.all {
  background-color: #c4c4c4;
}

.result .filters .active input {
  mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
}

.result .filters .active.info input,
.result .filters .active.notice input,
.result .filters .active.error input,
.result .filters .active.critical input {
  background: white;
}

.result .filters .active.all input,
.result .filters .active.warning input {
  background: black;
}

.result .badge.info,
.result .filters .active.info,
.result section.testcase ul li .level.info {
  background-color: var(--result-info-bg);
  color: white;
}

.result .badge.notice,
.result .filters .active.notice,
.result section.testcase ul li .level.notice {
  background: var(--result-notice-bg);
  color: white;
}

.result .badge.warning,
.result .filters .active.warning,
.result section.testcase ul li .level.warning {
  background: var(--result-warning-bg);
  color: black;
}

.result .badge.error,
.result .filters .active.error,
.result section.testcase ul li .level.error {
  background: var(--result-error-bg);;
  color: white;
}

.result .badge.critical,
.result .filters .active.critical,
.result section.testcase ul li .level.critical {
  background: var(--result-critical-bg);;
  color: white;
}

.result section.testcase li {
  list-style: none;
  display: flex;
  margin-bottom: .2em;
}

.result section.testcase li p {
  word-break: normal;
  overflow-wrap: anywhere;
  margin: 0;
}

.result section.testcase ul {
  padding-left: 3.7em;
  margin-bottom: .8em;
}

.result .collapsed {
  display: none!important;
}

.result section.module h3 {
  margin-bottom: 0;
  font-size: 1.4rem;
}
.result section.module h3 button {
  display: flex;
  align-items: center;
  cursor: pointer;
  width: 100%;
  background: none;
  border: none;
  padding: 0;
  color: inherit;
}

.result section.module h3 .module-name {
  margin-right: 1rem;
}

.result section.module h3 .badge {
  margin-right: 0.5rem;
  font-size: .6em;
}

.result section.module h3 .badge i {
  width: 1em;
}

.result section.module.expanded h3 {
  margin-bottom: 0.5rem;
}

.result section.module h3 i.caret {
  transform: rotate(0);
  transition: 0.1s transform;
  display: inline-block;
  width: 1em;
}

.result section.module.expanded h3 i.caret {
  transform: rotate(90deg);
}

.result section.details > section.module {
  background: #f7f7f7;
  padding: 0.5rem;
  margin-bottom: 1rem;
}

#link_location {
  width: 100%;
}

.result .modal-title {
  color: #000;
}

.result .vertical-align {
  display: flex;
  align-items: center;
}

.result .search {
  flex: 1;
  min-width: 300px;
}

.result .nav-link {
  cursor: pointer;
  color: inherit;
}

.result .dropdown-body {
    position: relative;
    padding: 1rem;
    white-space: nowrap;
}

.result button.share + .dropdown-menu .dropdown-body {
    min-width: calc(min(420px, 100vw - 2rem));
    display: flex;
}

.result button.btn-clipboard:hover {
    border: 1px solid #cdc7c2;
}

.result button.btn-clipboard > i.fa-check {
    color: #157347;
}

.result button.btn-clipboard > i.fa-remove {
    color: #bb2d3b;
}

.result .badge {
  --bs-badge-font-size: .8em;
}

.result .actions-btn {
  flex-grow: 1;
  display: flex;
  justify-content: flex-end;
  gap: .25rem;
}

.result .filters {
  margin-top: 1rem;
}

.result .filters .severity-levels {
  margin: .75rem 0;
}

.result .filters .severity-levels legend {
  font-size: inherit;
}

.result .filters .severity-level-inputs {
  display: flex;
  flex-wrap: wrap;
}

.result .filters .severity-level-inputs label {
  padding: 0.3em;
  border-radius: 0.5rem;
  border: 0.2em solid transparent;
}

.result .filters .severity-level-inputs label:focus-within {
  border-color: white;
  box-shadow: 0 0 0 0.2rem var(--outline-focus-color)
}

.result .filters .severity-level-inputs label:focus-within input[type=checkbox] {
  box-shadow: none;
  border-color: rgba(0, 0, 0, 0.25);
}

.result .filters .severity-level-inputs .form-check-inline {
  padding-left: 0;
}
.result .filters .severity-level-inputs input[type=checkbox] {
  float: none;
  margin-left: auto;
  margin-right: .5em;
}

.result .filters #severity-level-help dl {
  display: grid;
  grid: auto-flow / 1fr auto;
  grid-gap: .4rem;
}

.result .actions-btn > button > i.fa,
.result .actions-btn > div > button > i.fa {
  margin-right: 0.25rem;
}

.result .result-metadata {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.result .result-metadata .result-test-datetime {
  margin: 0;
}

.result .result-control-buttons {
  align-items: flex-end;
  display: flex;
  gap: 0.4rem;
  margin-top: 0.4rem;
}

@media(min-width:1400px) {
  .result .filters .severity-level-inputs {
    gap: 1rem;
  }
}

@media(max-width:767px){
  .result .actions-btn {
    width: 100%;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
  }

  .result .actions-btn > *,
  .result .actions-btn > div > button {
    flex-grow: 1;
  }

  .result .actions-btn > div {
    display: flex!important;
  }

  .result section.testcase header {
    flex-direction: column;
  }

  .result section.testcase header .test-case-id {
    margin-left: 1.2rem;
    margin-bottom: .75rem;
  }

  .result section.testcase header button > i.fa {
    margin-right: 1.5rem;
  }

  .result section.testcase ul {
    padding-left: 1.2em;
  }
}

@media(max-width:991px) {
  .result .filters > ul {
    flex-grow: 1;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
  }
}

